<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.course_registration.MainActivity">


<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
    android:textSize="26sp" android:text="" android:layout_marginEnd="7dp"
    android:layout_marginTop="8dp" android:id="@+id/textView2"/>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textSize="18sp" android:text="_____________________________________________" android:layout_marginEnd="7dp"
        android:layout_marginTop="8dp" android:id="@+id/textView3"/>



-<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" android:orientation="horizontal" android:layout_marginBottom="8dp" android:id="@+id/b1container">

    <Button
        android:id="@+id/btn_courselist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="courselist"
        android:text="Course List"
        android:drawableBottom="@drawable/clipboard"/>



</LinearLayout>

    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/b1container" android:orientation="horizontal" android:layout_marginBottom="8dp" android:id="@+id/b3container">

 <Button
        android:id="@+id/btn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="schedule"
        android:text="Schedule"
        android:drawableBottom="@drawable/calendar"/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/b3container" android:orientation="horizontal" android:layout_marginBottom="8dp" android:id="@+id/b2container">

    <Button
        android:id="@+id/btn_program_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="program_requirements"
        android:text="Program Requirements" />

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/b2container" android:orientation="horizontal" android:layout_marginBottom="8dp" android:id="@+id/b4container">

    <Button
        android:id="@+id/btn_password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="password_reset"
        android:text="Password Reset" />

</LinearLayout>



</android.support.constraint.ConstraintLayout>