...
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:id="@+id/txtcourse_description"
        android:hint="Description" app:layout_constraintTop_toBottomOf="@+id/txtprogram"
        android:inputType="textPersonName" android:ems="10" android:layout_marginStart="8dp"/>


    <TextView
        android:id="@+id/txtenrolled"
        android:layout_width="368dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="register"
            android:text="Register" />

...
